--- a/src/templates/empleados/index.html
+++ b/src/templates/empleados/index.html
@@ -1,1 +1,38 @@
-<h1>Hola mundo</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistema-empleados</title>
+</head>
+
+<body>
+    <h1>Empleados</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>id</th>
+                <th>Foto</th>
+                <th>Nombre</th>
+                <th>Doc</th>
+                <th>Dirección</th>
+                <th>Correo</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for empleado in empleados %}
+            <tr>
+                <td>{{empleado[0]}}</td>
+                <td>{{empleado[5]}}</td>
+                <td>{{empleado[1]}}</td>
+                <td>{{empleado[2]}}</td>
+                <td>{{empleado[3]}}</td>
+                <td>{{empleado[4]}}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</body>
+
+</html>
