--- a/src/templates/empleados/create.html
+++ b/src/templates/empleados/create.html
@@ -1,4 +1,4 @@
-<form method="POST" action="/create" enctype="multipart/form-data">
+<form method="POST" action="/store" enctype="multipart/form-data">
     <label for="txtnombre">Nombre</label>
     <input type="text" name="txtNombre" id="txtNombre"required/>
     <br/>
@@ -6,12 +6,12 @@
     <input type="number" name="txtDoc" id="txtDoc"required/>
     <br/>
     <label for="txtdirección">Dirección</label>
-    <input type="text" name="txtDirección" id="txtDirección"required/>
+    <input type="tex" name="txtDirección" id="txtDirección"required/>
     <br/>
     <label for="txtcorreo">Correo</label>
     <input type="email" name="txtCorreo" id="txtCorreo"required/>
     <br/>
-    <label for="txtfoto">Nombre</label>
+    <label for="txtfoto">Foto de Perfil</label>
     <input type="file" name="txtFoto" id="txtFoto"required/>
     <br/>
     <input type="submit" value="Agregar empleado"/>
