--- a/src/templates/empleados/create.html
+++ b/src/templates/empleados/create.html
@@ -1,3 +1,4 @@
+{% include 'header.html' %}
 <form method="POST" action="/store" enctype="multipart/form-data">
     <label for="txtnombre">Nombre</label>
     <input type="text" name="txtNombre" id="txtNombre"required/>
@@ -16,4 +17,4 @@
     <br/>
     <input type="submit" value="Agregar empleado"/>
 </form>
-   
+{% include 'footer.html' %}  
