--- a/src/templates/empleados/create.html
+++ b/src/templates/empleados/create.html
@@ -1,20 +1,49 @@
 {% include 'header.html' %}
 <form method="POST" action="/store" enctype="multipart/form-data">
-    <label for="txtnombre">Nombre</label>
-    <input type="text" name="txtNombre" id="txtNombre"required/>
-    <br/>
-    <label for="txtdoc">Doc</label>
-    <input type="number" name="txtDoc" id="txtDoc"required/>
-    <br/>
-    <label for="txtdirección">Dirección</label>
-    <input type="tex" name="txtDirección" id="txtDirección"required/>
-    <br/>
-    <label for="txtcorreo">Correo</label>
-    <input type="email" name="txtCorreo" id="txtCorreo"required/>
-    <br/>
-    <label for="txtfoto">Foto de Perfil</label>
-    <input type="file" name="txtFoto" id="txtFoto"required/>
-    <br/>
-    <input type="submit" value="Agregar empleado"/>
+    <div class="card bg-dark text-light">
+        <div class="card-header">
+            Alta empleado
+        </div>
+        <div class="card-body">
+            <p class="card-text">
+            <div class="form-group row ">
+                <label for="txtnombre" class="col-sm-2 col-form-label">Nombre</label>
+                <div class="col-sm-10">
+                    <input type="text" name="txtNombre" id="txtNombre" required />
+                </div>
+            </div>
+            <div class="form-group row ">
+                <label for="txtdoc" class="col-sm-2 col-form-label">Doc</label>
+                <div class="col-sm-10">
+                    <input type="number" name="txtDoc" id="txtDoc" required />
+                </div>
+            </div>
+            <div class="form-group row ">
+                <label for="txtdirección" class="col-sm-2 col-form-label">Dirección</label>
+                <div class="col-sm-10">
+                    <input type="tex" name="txtDirección" id="txtDirección" required />
+                </div>
+            </div>
+            <div class="form-group row ">
+                <label for="txtcorreo" class="col-sm-2 col-form-label">Correo</label>
+                <div class="col-sm-10">
+                    <input type="email" name="txtCorreo" id="txtCorreo" required />
+                </div>
+            </div>
+            <div class="form-group row ">
+                <label for="txtfoto" class="col-sm-2 col-form-label">Foto de Perfil</label>
+                <div class="col-sm-10">
+                    <input type="file" name="txtFoto" id="txtFoto" required />
+                </div>
+            </div>
+            <div class="form-group row ">
+                <div class="col-sm-10 offset-sm-2">
+                    <input class="btn btn-success" type="submit" value="Agregar empleado" />
+                    <a class="btn btn-primary" href="{{ url_for('index')}}">Volver</a>
+                </div>
+            </div>
+        </div>
+        </p>
+    </div>
 </form>
-{% include 'footer.html' %}  
+{% include 'footer.html' %}
