--- a/src/templates/empleados/index.html
+++ b/src/templates/empleados/index.html
@@ -1,8 +1,8 @@
 {% include 'header.html' %}
 
     <h1>Empleados</h1>
-    <table>
-        <thead>
+    <table class="table table-dark">
+        <thead class="thead-dark">
             <tr>
                 <th>#</th>
                 <th>Foto</th>
@@ -16,15 +16,17 @@
             {% for empleado in empleados %}
             <tr>
                 <td>{{empleado[0]}}</td>
-                <td>{{empleado[5]}}</td>
+                <td>
+                    <img width="100" src="{{ url_for('uploads', nombreFoto=empleado[5]) }}" alt="Foto de perfil"> 
+                </td>
                 <td>{{empleado[1]}}</td>
                 <td>{{empleado[2]}}</td>
                 <td>{{empleado[3]}}</td>
                 <td>{{empleado[4]}}</td>
                 <td>
-                    <a href="/modify/{{empleado[0]}}">Editar</a>
+                    <a class="btn btn-warning" href="/modify/{{empleado[0]}}">Editar</a>
                     |
-                    <a href="/delete/{{empleado[0]}}">Borrar</a>
+                    <a class="btn btn-danger" href="/delete/{{empleado[0]}}">Borrar</a>
                 </td>
             </tr>
             {% endfor %}
